--- a/llama2.knc.c.run/llama2.knc.c.run.vcxproj
+++ b/llama2.knc.c.run/llama2.knc.c.run.vcxproj
@@ -93,7 +93,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <Optimization>MaxSpeed</Optimization>
+      <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <AdditionalIncludeDirectories>$(ICPP_COMPILER17)mkl\include</AdditionalIncludeDirectories>
@@ -102,6 +102,7 @@
       <OpenMP>GenerateParallelCode</OpenMP>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <DisableSpecificWarnings>10373</DisableSpecificWarnings>
+      <OffloadArch>OffloadMIC</OffloadArch>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
